--- a/Test1/document/paper.tex
+++ b/Test1/document/paper.tex
@@ -27,20 +27,21 @@
 %\theyear{2017}
 \theday{20}%填写当月的具体日期
 
-\title{}
+\title{Title}
 \maketitle
+% 摘要
+\begin{cnabstract}%此处没有采用sbstract命名，是为了将来如果要加入英文摘要时扩展的方便
 
-% \begin{cnabstract}%此处没有采用sbstract命名，是为了将来如果要加入英文摘要时扩展的方便
 
+\cnkeywords{差分方程，元胞自动机，交通阻塞模型，数值模拟}
+\end{cnabstract}
 
-% \cnkeywords{差分方程，元胞自动机，交通阻塞模型，数值模拟}
-% \end{cnabstract}
-
-% \newpage
-%\tableofcontents\newpage%增加目录，要不要都可以。不想要的话，就在本行前加“%”（英文的百分号）
+\newpage
+% \tableofcontents \newpage%增加目录，要不要都可以。不想要的话，就在本行前加“%”（英文的百分号）
 
 
 \section{问题重述}
+
 
 \section{建模分析}
 
@@ -72,9 +73,7 @@
 
 \subsection{建立模型}
 
-
 \subsection{模型求解和分析}
-
 
 \subsection{模型评价}
 \subsubsection{模型优点}
@@ -89,7 +88,7 @@
 
 2)	
 
-
+%   图片
 %   \begin{figure}
 %   \centering
 %   \includegraphics[width=.6\textwidth]{fig1}
