--- a/Test2/LaTeX/paper.tex
+++ b/Test2/LaTeX/paper.tex
@@ -25,7 +25,7 @@
 \advisor{数模指导组}
 
 %\theyear{2017}
-\theday{20}%填写当月的具体日期
+\theday{07}%填写当月的具体日期
 
 \title{Title}
 
@@ -34,7 +34,7 @@
 \begin{cnabstract}%此处没有采用sbstract命名，是为了将来如果要加入英文摘要时扩展的方便
 
 
-\cnkeywords{差分方程，元胞自动机，交通阻塞模型，数值模拟}
+\cnkeywords{符号秩检验，方差检验因子分析，聚类分析，}
 \end{cnabstract}
 
 \newpage
@@ -42,16 +42,19 @@
 
 
 \section{问题重述}
+确定葡萄酒质量时一般是通过聘请一批有资质的评酒员进行品评。每个评酒员在对葡萄酒进行品尝后对其分类指标打分，然后求和得到其总分，从而确定葡萄酒的质量。酿酒葡萄的好坏与所酿葡萄酒的质量有直接的关系，葡萄酒和酿酒葡萄检测的理化指标会在一定程度上反映葡萄酒和葡萄的质量。
+
+首先需要分析两组评酒员的评价结果有无显著性差异，如果有则需要确定哪一组评酒员的结果更可信；然后根据酿酒葡萄的理化指标和葡萄酒的质量，对这些酿酒葡萄进行分级；根据酿酒葡萄与葡萄酒的理化指标，寻找其中的联系；分析酿酒葡萄和葡萄酒的理化指标对葡萄酒质量的影响，并论证能否用葡萄和葡萄酒的理化指标来评价葡萄酒的质量。
 
 
 \section{建模分析}
 
 \subsection{模型假设}
-针对该模型，我们提出了如下的合理假设：
+对于葡萄和葡萄酒的理化指标与葡萄和葡萄酒的质量所建立的模型模型，我们提出了如下的合理假设：
 \begin{enumerate}
-\item 
-\item 
-\item 
+\item 未考虑到的酿酒葡萄理化指标不会影响葡萄酒的质量；
+\item 被检验的葡萄能都够代表该葡萄种类的特性；
+\item 附件中给出的葡萄和葡萄酒理化指标都准确可靠；
 \item 
 \end{enumerate}
 
