--- a/Test2/LaTeX/paper.tex
+++ b/Test2/LaTeX/paper.tex
@@ -7,8 +7,8 @@
 %%    1. 在改变编译方式前应先删除 *.toc 和 *.aux 文件，
 %%       因为不同编译方式产生的辅助文件格式可能并不相同。
 
-\documentclass{cumcmart}
-% \documentclass[nocover]{cumcmart}%%%切换到无封面的版本，有些区域不允许前面的承诺页用pdf格式，可以用此去掉。
+% \documentclass{cumcmart}
+\documentclass[nocover]{cumcmart}%%%切换到无封面的版本，有些区域不允许前面的承诺页用pdf格式，可以用此去掉。
 
 
 
@@ -34,7 +34,7 @@
 \begin{cnabstract}%此处没有采用sbstract命名，是为了将来如果要加入英文摘要时扩展的方便
 
 
-\cnkeywords{符号秩检验，方差检验因子分析，聚类分析，}
+\cnkeywords{符号秩检验，方差检验，因子分析，聚类分析，}
 \end{cnabstract}
 
 \newpage
@@ -42,8 +42,9 @@
 
 
 \section{问题重述}
-确定葡萄酒质量时一般是通过聘请一批有资质的评酒员进行品评。每个评酒员在对葡萄酒进行品尝后对其分类指标打分，然后求和得到其总分，从而确定葡萄酒的质量。酿酒葡萄的好坏与所酿葡萄酒的质量有直接的关系，葡萄酒和酿酒葡萄检测的理化指标会在一定程度上反映葡萄酒和葡萄的质量。解决以下问题：
+确定葡萄酒质量时一般是通过聘请一批有资质的评酒员进行品评。每个评酒员在对葡萄酒进行品尝后对其分类指标打分，然后求和得到其总分，从而确定葡萄酒的质量。酿酒葡萄的好坏与所酿葡萄酒的质量有直接的关系，葡萄酒和酿酒葡萄检测的理化指标会在一定程度上反映葡萄酒和葡萄的质量。
 
+利用附件一、附件二和附件三所给的数据，解决以下问题：
     \begin{enumerate}
         \item 分析两组评酒员的评价结果有无显著性差异，如果有则需要确定哪一组评酒员的结果更可信；
         \item 根据酿酒葡萄的理化指标和葡萄酒的质量，对这些酿酒葡萄进行分级；
@@ -73,7 +74,8 @@
         \toprule
         \multicolumn{2}{c}{\large 模型记号说明}\\
         \midrule
-            ${P_1}$ &   第一组评酒员整体
+            ${P_i}$         &   第i组评酒员整体，${i = 1,2}$    \\
+            ${J_{i}^{(k)}}$ &   $k$ 葡萄酒的 $i$   \\ 
             
 
         \bottomrule
@@ -82,6 +84,9 @@
     \end{table}
 
     \subsection{问题分析}
+
+        \subsubsection{缺省值和异常值处理}
+        通过MATLAB数据预处理，发现“第一组红葡萄酒品尝评分表中(76, F)数据缺失，而第一组白葡萄酒品尝评分表中(233, J)及(298, L)数据异常，为此我们对数据进行预处理。
 
         \subsubsection{可靠性分析}
         因为两组品酒员对酒样的评分是成对比较，且对评分并不要求成对数据之差服从正态分布，只要求对称分布，再有葡萄酒质量评判的分布的不确定性，故我们采用统计学中 Wilcoxon 符号秩检验来解释两组评酒员对葡萄酒的评价有无显著性差异。
@@ -94,7 +99,7 @@
     \subsection{建立模型}
 
         \subsubsection{符号秩和检验模型的建立}
-    将两组评酒员分别看作两个整体 ${P_1}$、${P_2}$ ，对每个红葡萄酒样品 ${J_{i}^{(1)}}$ 每个白葡萄酒样品 ${J_{i}^{(2)}}$进行评价，${P_1}$ 对每个红葡萄酒的样品 ${J_{i}^{(1)}}$ 的评价结果通过组内每一位品酒员的评分 ${x_{ij}^{(1)}}$ 的均值 ${\bar{x}_{i}^{(1)}} = \frac{1}{10}\sum\limits_{j=1}^{10}x_{ij}^{(1)}$来刻画，对每个白葡萄酒的样品 ${J_{i}^{(2)}}$ 的评价结果通过组内每一位品酒员的评分 ${x_{ij}^{(2)}}$ 的均值 ${\bar{x}_{i}^{(2)}} = \frac{1}{10}\sum\limits_{j=1}^{10}x_{ij}^{(1)}$来刻画，同样 ${P_2}$ 对每个红葡萄酒的样品 ${J_{i}^{(1)}}$ 的评价结果用均值 ${\bar{y}_{i}^{(1)}} = \frac{1}{10}\sum\limits_{j=1}^{10}y_{ij}^{(1)}$，对每个白葡萄酒的样品 ${J_{i}^{(2)}}$ 的评价结果用均值 ${\bar{y}_{i}^{(2)}} = \frac{1}{10}\sum\limits_{j=1}^{10}y_{ij}^{(2)}$来刻画，从而得到两组评酒员对每种样品酒的评价结果，建立两组评酒员对红葡萄酒和白葡萄酒的评价。
+    将两组评酒员分别看作两个整体 ${P_1}$、${P_2}$ ，对每个红葡萄酒样品 ${J_{i}^{1}}$ 每个白葡萄酒样品 ${J_{i}^{2}}$进行评价，${P_1}$ 对每个红葡萄酒的样品 ${J_{i}^{1}}$ 的评价结果通过组内每一位品酒员的评分 ${x_{ij}^{1}}$ 的均值 $\bar{x}_{i}^1 = \frac{1}{10}\sum\limits_{j=1}^{10}x_{ij}^{1}$来刻画，对每个白葡萄酒的样品 ${J_{i}^{2}}$ 的评价结果通过组内每一位品酒员的评分 ${x_{ij}^{2}}$ 的均值 ${\bar{x}_{i}^{2}} = \frac{1}{10}\sum\limits_{j=1}^{10}x_{ij}^{1}$来刻画，同样 ${P_2}$ 对每个红葡萄酒的样品 ${J_{i}^{1}}$ 的评价结果用均值 ${\bar{y}_{i}^{1}} = \frac{1}{10}\sum\limits_{j=1}^{10}y_{ij}^{1}$，对每个白葡萄酒的样品 ${J_{i}^{2}}$ 的评价结果用均值 ${\bar{y}_{i}^{2}} = \frac{1}{10}\sum\limits_{j=1}^{10}y_{ij}^{2}$来刻画，从而得到两组评酒员对每种样品酒的评价结果，建立两组评酒员对红葡萄酒和白葡萄酒的评价。
 
     对酒样品 ${J_i}$，${J_2}$ 分别得到一对数据。葡萄酒质量是其外观、香气、口味、典型性的综合表现\cite{1}，可知两对数据之间的差异由多种因素引起，由于不仅酒样品 ${J_{i}^{1}}$、${J_{i}^{2}}$ 的特性有广泛的差异，而且评酒员存在感官评价的异质性\cite{2}，就不能将一组评酒员对27种红葡萄酒或者28种白葡萄酒的评价结果看成是同分布随机变量。为鉴定他们的评价结果有无显著性差异，可使用基于成对数据的逐对比较法，以红葡萄酒样品为例，有27对相互独立的评价结果：${(X_1,Y_1),(X_2,Y_2),\ldots,(X_{27},Y_{27})}$，令${D_1 = X_1 - Y_1,D_2 = X_2 - Y_2,\ldots,D_{27} = X_{27} - Y_{27}}$，则${D_1,D_2,\ldots,D_{27}}$相互独立，我们对 ${D_1,D_2,\ldots,D_{27}}$ 进行符号秩和检验。
 
@@ -126,7 +131,7 @@
 
         \end{verbatim}
 
-        两个 $h$ 都为 $1$ ，即两组评酒员的评价结果有显著性差异，再由
+        两个 $h$ 都为 $1$ ，即两组评酒员的评价结果均有显著性差异，再由
 
     \begin{table}[!htbp]
     \centering
