--- a/Test2/LaTeX/paper.tex
+++ b/Test2/LaTeX/paper.tex
@@ -64,6 +64,7 @@
         \item 评酒结果采取加分制；
         \item 附件2中给出的葡萄和葡萄酒理化指标都准确可靠；
         \item 
+        \item 
     \end{enumerate}
 
     \subsection{记号说明}
@@ -75,7 +76,9 @@
         \multicolumn{2}{c}{\large 模型记号说明}\\
         \midrule
             ${P_i}$         &   第i组评酒员整体，${i = 1,2}$    \\
-            ${J_{i}^{(k)}}$ &   $k$ 葡萄酒的 $i$   \\ 
+            ${J_{i}^{k}}$ &   $k$ 葡萄酒的第 $i$ 样品（$k=1,\text{红葡萄酒；} k=2,\text{白葡萄酒}$）  \\ 
+             &  \\
+             &  \\
             
 
         \bottomrule
@@ -86,7 +89,7 @@
     \subsection{问题分析}
 
         \subsubsection{缺省值和异常值处理}
-        通过MATLAB数据预处理，发现“第一组红葡萄酒品尝评分表中(76, F)数据缺失，而第一组白葡萄酒品尝评分表中(233, J)及(298, L)数据异常，为此我们对数据进行预处理。
+        通过MATLAB数据预处理，发现“第一组红葡萄酒品尝评分表中(76, F)数据缺失，而第一组白葡萄酒品尝评分表中(233, J)及(298, L)数据异常，为此我们对数据进行预处理。使用异常值所在的项目的其他数据的均值去替代，即消除异常数据对其他数据的影响。
 
         \subsubsection{可靠性分析}
         因为两组品酒员对酒样的评分是成对比较，且对评分并不要求成对数据之差服从正态分布，只要求对称分布，再有葡萄酒质量评判的分布的不确定性，故我们采用统计学中 Wilcoxon 符号秩检验来解释两组评酒员对葡萄酒的评价有无显著性差异。
@@ -96,9 +99,12 @@
         \subsubsection{因子分析、聚类分析}
         由于酿酒葡萄的理化指标繁杂，彼此之间相互联系，
 
+
+        \subsubsection{多元逐步回归分析}
+
     \subsection{建立模型}
 
-        \subsubsection{符号秩和检验模型的建立}
+        \subsubsection{符号秩检验模型的建立}
     将两组评酒员分别看作两个整体 ${P_1}$、${P_2}$ ，对每个红葡萄酒样品 ${J_{i}^{1}}$ 每个白葡萄酒样品 ${J_{i}^{2}}$进行评价，${P_1}$ 对每个红葡萄酒的样品 ${J_{i}^{1}}$ 的评价结果通过组内每一位品酒员的评分 ${x_{ij}^{1}}$ 的均值 $\bar{x}_{i}^1 = \frac{1}{10}\sum\limits_{j=1}^{10}x_{ij}^{1}$来刻画，对每个白葡萄酒的样品 ${J_{i}^{2}}$ 的评价结果通过组内每一位品酒员的评分 ${x_{ij}^{2}}$ 的均值 ${\bar{x}_{i}^{2}} = \frac{1}{10}\sum\limits_{j=1}^{10}x_{ij}^{1}$来刻画，同样 ${P_2}$ 对每个红葡萄酒的样品 ${J_{i}^{1}}$ 的评价结果用均值 ${\bar{y}_{i}^{1}} = \frac{1}{10}\sum\limits_{j=1}^{10}y_{ij}^{1}$，对每个白葡萄酒的样品 ${J_{i}^{2}}$ 的评价结果用均值 ${\bar{y}_{i}^{2}} = \frac{1}{10}\sum\limits_{j=1}^{10}y_{ij}^{2}$来刻画，从而得到两组评酒员对每种样品酒的评价结果，建立两组评酒员对红葡萄酒和白葡萄酒的评价。
 
     对酒样品 ${J_i}$，${J_2}$ 分别得到一对数据。葡萄酒质量是其外观、香气、口味、典型性的综合表现\cite{1}，可知两对数据之间的差异由多种因素引起，由于不仅酒样品 ${J_{i}^{1}}$、${J_{i}^{2}}$ 的特性有广泛的差异，而且评酒员存在感官评价的异质性\cite{2}，就不能将一组评酒员对27种红葡萄酒或者28种白葡萄酒的评价结果看成是同分布随机变量。为鉴定他们的评价结果有无显著性差异，可使用基于成对数据的逐对比较法，以红葡萄酒样品为例，有27对相互独立的评价结果：${(X_1,Y_1),(X_2,Y_2),\ldots,(X_{27},Y_{27})}$，令${D_1 = X_1 - Y_1,D_2 = X_2 - Y_2,\ldots,D_{27} = X_{27} - Y_{27}}$，则${D_1,D_2,\ldots,D_{27}}$相互独立，我们对 ${D_1,D_2,\ldots,D_{27}}$ 进行符号秩和检验。
@@ -131,7 +137,7 @@
 
         \end{verbatim}
 
-        两个 $h$ 都为 $1$ ，即两组评酒员的评价结果均有显著性差异，再由
+        两个 $h$ 都为 $1$ ，即两组评酒员的评价结果均有显著性差异，再由两组方差总值与方差分析图，可以得到第二组的评分结果更可信。
 
     \begin{table}[!htbp]
     \centering
