Finish all test2.

--- a/Test2/LaTeX/paper.tex
+++ b/Test2/LaTeX/paper.tex
@@ -89,8 +89,8 @@
     \subsection{问题分析}
 
         \subsubsection{缺省值和异常值处理}
-        通过MATLAB数据预处理，发现“第一组红葡萄酒品尝评分表中(76, F)数据缺失，而第一组白葡萄酒品尝评分表中(233, J)及(298, L)数据异常，为此我们对数据进行预处理。使用异常值所在的项目的其他数据的均值去替代，即消除异常数据对其他数据的影响。
-
+        通过MATLAB数据预处理，发现“第一组红葡萄酒品尝评分表中(76, F)数据缺失，而第一组白葡萄酒品尝评分表中(233, J)及(298, L)数据异常，为此我们对数据进行预处理。使用异常值所在的项目的其他数据的均值去替代，即消除异常数据对其他数据的影响
+。
         \subsubsection{可靠性分析}
         因为两组品酒员对酒样的评分是成对比较，且对评分并不要求成对数据之差服从正态分布，只要求对称分布，再有葡萄酒质量评判的分布的不确定性，故我们采用统计学中 Wilcoxon 符号秩检验来解释两组评酒员对葡萄酒的评价有无显著性差异。
 
